<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">

    <PreferenceCategory
        android:key="display_extra_group"
        android:title="@string/title_display_favorite">
        <!--<se.pixelcoding.wikitab.preferences.FixedMultiSelectListPreference
            android:defaultValue="@array/cpbl_team_id"
            android:entries="@array/cpbl_team_name"
            android:entryValues="@array/cpbl_team_id"
            android:key="favorite_teams"
            android:title="@string/title_favorite_teams" />-->
        <!--
            MultiSelectListPreference example
            http://stackoverflow.com/a/11777632
        -->

        <CheckBoxPreference
            android:defaultValue="@bool/def_enable_pull_to_refresh"
            android:key="pull_to_refresh"
            android:summaryOff="@string/summary_pull_to_refresh_off"
            android:summaryOn="@string/summary_pull_to_refresh_on"
            android:title="@string/title_enable_pull_to_refresh" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_drawer_menu"
            android:summaryOff="@string/summary_pull_to_refresh_off"
            android:summaryOn="@string/summary_use_drawer_menu_on"
            android:title="@string/title_use_drawer_menu" />
    </PreferenceCategory>
</PreferenceScreen>